# spbstu_science_of_programming

./: README.md  engine.h  main.cpp  wrapper.h
lab1/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  operation.h
lab1/plugins_realization/: pow.cpp
lab2/: CMakeLists.txt  main.cpp  node.cpp  node.h  output.txt  resource.cpp  resource.h  tree.cpp  tree.h  xml_tree.txt
lab3/: CMakeLists.txt  engine.h  main.cpp  wrapper.h
